# smnrpx

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.py  pyproject.toml  smnrp.yml  smnrp_reset  smnrp_schema.yml
.github/: dependabot.yml
.github/workflows/: default.yml
nginx/: index.html  nginx.conf
nginx/errorpages/: auth_required.html
smnrpx/: __init__.py  app.py  assets.py  certificates.py  configuration.py  constants.py  domains.py  hashing.py  nginx_runtime.py
templates/: csr.conf.j2  nginx.conf.j2  smnrp.conf.j2
tests/: test_entrypoint.py  test_smnrp_template.py
